feat: add ticket functionalities
